added basic database structure, added jooq